# 3ds_sync

./: .gitignore  README.md
client/: Makefile  cia.rsf
client/include/: common.h
client/source/: archive.c  archive.h  bundle.c  bundle.h  config.c  config.h  main.c  nds.c  network.c  sync.c  sync.h  title.c  title.h  ui.c  ui.h  update.c  update.h
ds/: Makefile  README.md
ds/arm7/: Makefile  arm7.c
ds/include/: common.h  config.h  http.h  network.h  saves.h  sha256.h  sync.h  ui.h  update.h
ds/source/: config.c  http.c  libnds_stubs.c  main.c  main.c.ref  network.c  saves.c  sha256.c  sync.c  ui.c  update.c
server/: pyproject.toml
server/app/: config.py  main.py
server/app/middleware/: auth.py
server/app/models/: save.py
server/app/routes/: saves.py  status.py  sync.py  titles.py  update.py
server/app/services/: bundle.py  game_names.py  storage.py
server/data/: 3dstdb.txt  dstdb.txt
server/tests/: conftest.py  test_api.py  test_bundle.py  test_sync.py
tools/: convert_japanese.py  ds_roms.py  parse_dump.py
